feat: Implement OAuth system browser login
- Add Express OAuth backend for Vercel deployment
- Register custom protocol (aifloatingassistant://) for deep linking
- Replace embedded Google login with system browser flow
- Add JWT token-based authentication
- Update login UI with proper OAuth redirect
- Add deployment guides and documentation

Fixes Google 400 login error by using production-grade OAuth 2.0

--- a/package.json
+++ b/package.json
@@ -44,7 +44,15 @@
     "dmg": {
       "title": "AI Floating Assistant Installer",
       "icon": "assets/icons/logo.icns"
-    }
+    },
+    "protocols": [
+      {
+        "name": "AI Floating Assistant",
+        "schemes": [
+          "aifloatingassistant"
+        ]
+      }
+    ]
   },
   "keywords": [],
   "author": "Ankit",
